update experience timeline

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="row">
       <div class="col-lg-6" style="border-radius:15px; padding-top: 15px;">
         <p style="font-size: large;">
-            I'm a fourth year Computer Engineering Student at Georgia Tech with a strong interest in software, cloud computing and embedded systems, or in the more buzz-wordy sense... The Internet of Things (IoT). 
+            I'm a fourth year Computer Engineering Student at Georgia Tech with an interest in software development, cloud computing and analytics.
         </p>
         <p style="font-size: large;">
             I was raised in the 305 (alternatively Miami, Florida) and spent my childhood eating the best 
@@ -147,6 +147,19 @@
     <div class="col-lg-2 text-center"></div>
     <div id="cd-timeline" class="col-lg-8 text-center">
       <h2>Experience</h2>
+            <!-- cd-timeline-block -->
+      <div class="cd-timeline-block">
+        <a href="https://aws.amazon.com//" target="_blank">
+            <div class="cd-timeline-img cd-company"><img src="img/logo/aws.jpeg" alt="Picture"></div>
+        </a>
+        <!-- cd-timeline-img -->
+        <div class="cd-timeline-content text-left">
+          <h4 style="padding-bottom: 0px;">Amazon Web Services | Software Development Engineer </h4>
+          <h5 style="padding-bottom: 0px;">Seattle, WA</h5>
+          <h6 style="padding-bottom: 0px;">March 2020 - Current </h6>
+        </div>
+        <!-- cd-timeline-content -->
+      </div>
       <!-- cd-timeline-block -->
       <div class="cd-timeline-block">
         <a href="https://www.goldmansachs.com/" target="_blank">
