description yield metrics

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <h5 style="padding-bottom: 0px;">Folsom, CA</h5>
           <h6 style="padding-bottom: 0px;">Jan 2018 - May 2018 </h6>
           <p>• Developed wrapper library to interface with the test platform’s BIOS and BMC through the IPMI protocol </p>
-          <p>• Automated yield report generation and distribution for 3D XPoint persistent memory DIMMs </p>
+          <p>• Developed automated report generation tool for distributing recurring emails on yield metrics for persistent memory DIMMs </p>
         </div>
       </div>
       <!-- cd-timeline-block -->
