Georgia Tech Aug 2015 - May 2019

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Georgia Institute of Technology | Student</h4>
           <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
-          <h6 style="padding-bottom: 0px;">Aug 2015 ~ Present</h6>
+          <h6 style="padding-bottom: 0px;">Aug 2015 - May 2019</h6>
           <p>School of Electrical and Computer Engineering</p>
           <p>Computer Engineering Major</p>
         </div>
