Substitute ~ with - in the work timeline

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;"> ECE 2031 Digital Design Lab | Teaching Assistant</h4>
           <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
-          <h6 style="padding-bottom: 0px;">Jan 2017 ~ Dec 2017 (1 Year)</h6>
+          <h6 style="padding-bottom: 0px;">Jan 2017 - Dec 2017 (1 Year)</h6>
           <p>• Facilitate student learning in a rapid-prototyping lab environment involving FPGA projects. </p>
           <p>• Aid students in creating basic digital logic circuits and help debug them with oscilloscopes and logic analyzers. </p>
         </div>
@@ -266,7 +266,7 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Inan Medical Devices Research Lab, Gatech | Research Assistant</h4>
           <h5 style="padding-bottom: 0px;">Atlanta, GA</h5>
-          <h6 style="padding-bottom: 0px;">Sep 2016 ~ May 2017 (1.5 Years)</h6>
+          <h6 style="padding-bottom: 0px;">Sep 2016 - May 2017 (1.5 Years)</h6>
           <p>• Vetted sensor materials to conclude feasibility of detecting a sensor on a human body for research in smart sensor packaging system for characterizing sensor-to-body interactions in wearable medical devices.</p>
           <p>• Implemented vibrational system using accelerometers and bone transducers to generate a heatmap that would predict sensor location as a proof of concept</p>
         </div>
@@ -281,7 +281,7 @@
         <div class="cd-timeline-content text-left">
           <h4 style="padding-bottom: 0px;">Florida Power & Light | Software Engineering Intern</h4>
           <h5 style="padding-bottom: 0px;">Miami, FL</h5>
-          <h6 style="padding-bottom: 0px;">May 2016 ~ Aug 2016 (4 Months)</h6>
+          <h6 style="padding-bottom: 0px;">May 2016 - Aug 2016 (4 Months)</h6>
           <p>• Designed, developed, and released an application using Visual Basic and SQL Server for Customer Accounting to increase visibility and reporting capabilities to the process improvement team, impacting a department of over 60 employees.</p>
           <p>• Streamlined internal questions backlog process through automation by turning a physical binder of questions into a database application.</p>
         </div>
