--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="row">
       <div class="col-lg-6" style="border-radius:15px; padding-top: 15px;">
         <p style="font-size: large;">
-            I'm a fourth year Computer Engineering Student at Georgia Tech with an interest in software development, cloud computing and analytics.
+            I'm a Computer Engineering graduate from Georgia Tech with an interest in software development, cloud computing and analytics.
         </p>
         <p style="font-size: large;">
             I was raised in the 305 (alternatively Miami, Florida) and spent my childhood eating the best
