--- a/projects/gtmab/index.html
+++ b/projects/gtmab/index.html
@@ -208,7 +208,7 @@
 							</header>
 							<p style="margin-bottom: 1em;"> Justin Zheng worked on localization and ROS integration of the code base for the blimp. </p>						
 							<footer>
-								<a href="https://justinyuzheng.com/" target="_blank" class="button">https://justinyuzheng.wordpress.com/</a>
+								<a href="https://justinyuzheng.wordpress.com/" target="_blank" class="button">www.justinyuzheng.com</a>
 							</footer>
 						</article>
 
