Add ICCA, IEEE conference link

--- a/index.html
+++ b/index.html
@@ -543,6 +543,9 @@
             <h2 class="h2-boxed" style="padding-bottom: 10px;">GT-MAB</h2>
             <img src="./img/portfolio/gtmab.png" class="img-responsive" alt="">
             <ul class="list-inline item-details">
+              <li><strong><a class="btn btn-sm btn-outline" href="https://ieeexplore.ieee.org/document/9264514"
+                target="_blank"><i class="fa fa-fw fa-file-pdf-o"></i>IEEE Paper</a>
+              </strong></li>
               <li><strong><a class="btn btn-sm btn-outline" href="/projects/gtmab/index.html"
                               target="_blank"><i class="fa fa-fw fa-code"></i> Demo Site </a>
               </strong></li>
