Update dft project title from h3 to h5

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 <img src="projects/bitcoin_price_analyzer/bitcoin_ui.png" class="img-responsive" alt=""> </a>
             </div>
             <div class=" portfolio-item bf-item python web js db">
-              <h3 style="padding-bottom: 0px"> 2D Discrete Fourier Transform </h3>
+              <h5 style="padding-bottom: 0px"> 2D Discrete Fourier Transform with Concurrency </h5>
               <a href="#2d_dft_modal" class="portfolio-link" data-toggle="modal">
                 <div class="caption">
                   <div class="caption-content">
